src/components/SneakersList/style.scss
.sneakers {
  padding-bottom: 40px;
}
.card {
  width: 100%;
  max-width: 250px;
  background: #ffffff;
  border: 1px solid #f3f3f3;
  border-radius: 40px;
  cursor: pointer;
  transition: all 0.3s ease;

  padding: 30px 25px;
  margin: 0 auto;

  &:not(:last-child) {
    margin-bottom: 30px;
  }

  &__header {
    position: relative;
    margin-bottom: 15px;
  }
  &__img {
    // max-width: 133px;
    height: 112px;
    margin: 0 auto;
  }
  &__favorite {
    width: 32px;
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #ffffff;
    border: 2px solid #f8f8f8;
    border-radius: 7px;
    cursor: pointer;

    position: absolute;
    top: 0;
    left: 0;

    &-img {
      transition: all 0.3s ease;
    }
    &:hover {
      & .card__favorite-img {
        stroke: #ff8585;
      }
    }
    &.active {
      background: #fef0f0;

      & .card__favorite-img {
        stroke: none;
        fill: #ff8585;
      }
    }
  }
  &__caption {
    font-size: 14px;

    margin-bottom: 15px;
  }
  &__footer {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
  &__price {
    &--text {
      display: block;
      font-size: 11px;
      color: #9b9b9b;
      text-transform: uppercase;
      margin-bottom: 3px;
    }
    &--value {
      font-weight: 700;
    }
  }
  &__action {
    width: 32px;
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    line-height: 1;
    font-weight: 700;
    color: #d3d3d3;
    background: #ffffff;
    border: 1px solid #f2f2f2;
    border-radius: 8px;
    cursor: pointer;
    // transition: all 0.3s ease;

    &:hover {
      background: linear-gradient(180deg, #89f09c 0%, #3cc755 100%);

      & svg path {
        fill: #fff;
      }
    }
    &.active {
      background: linear-gradient(180deg, #89f09c 0%, #3cc755 100%);
    }
  }
}
@media (min-width: 640px) {
  .sneakers {
    &__list {
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      grid-template-rows: repeat(4, 1fr);
      grid-column-gap: 20px;
      grid-row-gap: 20px;
    }
  }
  .card {
    &:not(:last-child) {
      margin-bottom: 0;
    }
  }
}
@media (min-width: 1024px) {
  .sneakers {
    &__list {
      grid-template-columns: repeat(4, 1fr);
      grid-template-rows: repeat(3, 1fr);
      grid-column-gap: 30px;
      grid-row-gap: 30px;
    }
  }
  .card {
    &:hover {
      box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
    }
  }
}
@media (min-width: 1220px) {
  .card {
    max-width: 210px;
  }
}

